[package]
name = "moxie-playground"
description = "My super awesome Rust, WebAssembly, Webpack, and Moxie project!"
version = "0.1.0"
authors = ["ZetaNumbers <zeta0.114942@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
mox = { git = "https://github.com/ZetaNumbers/moxie.git", branch = "rust-analyzer-compatibility" }
moxie = { git = "https://github.com/ZetaNumbers/moxie.git", branch = "rust-analyzer-compatibility" }
moxie-dom = { git = "https://github.com/ZetaNumbers/moxie.git", branch = "rust-analyzer-compatibility" }
js-sys = "*"
instant = "*"
cgmath = "0.17"
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "DomMatrix",
    "Path2d",
    "Window",
]


[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
