[package]
name = "moxie-playground"
description = "My super awesome Rust, WebAssembly, Webpack, and Moxie project!"
version = "0.1.0"
authors = ["ZetaNumbers <zeta0.114942@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
panic = "abort"

[features]
#default = ["wee_alloc"]

[dependencies]
mox = { git = "https://github.com/anp/moxie.git", branch = "main" }
moxie = { git = "https://github.com/anp/moxie.git", branch = "main" }
moxie-dom = { git = "https://github.com/anp/moxie.git", branch = "main" }
js-sys = "*"
instant = "*"
cgmath = "0.17"
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "DomMatrix",
    "Path2d",
    "Window",
    "Location",
    "Url",
    "UrlSearchParams",
]


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '-g']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
